Add 24hours clock

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="app"></div>
     <script src="./app.js"></script>
+    <script src="./src/js/clock.js"></script>
   </body>
 </html>
