--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <div id="app"></div>
     <script src="./app.js"></script>
     <script src="./src/js/clock.js"></script>
+    <script src="./src/js/weather.js"></script>
   </body>
 </html>
