--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="app"></div>
     <script src="./app.js"></script>
+    <script src="./env.js"></script>
     <script src="./src/js/clock.js"></script>
     <script src="./src/js/weather.js"></script>
   </body>
