Save and load clock mode from local storage

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   <body>
     <div id="app">
       <h1 class="clock">00:00:00</h1>
-      <input type="button" class="clock__toggle-btn" value="AM / PM" />
+      <input type="button" class="clock__toggle-btn" value="12 Hour" />
+      <h2 class="date"></h2>
 
-      <form class="form">
+      <!-- <form class="form">
         <input class="greeting__input" type="text" placeholder="What is your name?" />
       </form>
       <span class="greeting__message"></span>
       <button class="greeting__edit">Edit</button>
-      <button class="greeting__save">Save</button>
+      <button class="greeting__save">Save</button> -->
 
       <div class="weather"></div>
       <div class="weather-status">
