Get current covid data from Covid-19 API

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           <div class="covid__column">
             <span class="covid--display"></span>
           </div>
+          <div class="covid__column">
+            <div class="covid--summury"></div>
+          </div>
         </div>
       </header>
 
