--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./src/css/style.css" />
     <title>ScripTodo</title>
   </head>
   <body>
+    <header class="header">
+      <div class="weather">
+        <div class="weather__column active">
+          <button class="weather__active-button">
+            <i class="fas fa-map-marker-alt"></i>
+          </button>
+          <span class="weather__active-text">Get current weather</span>
+        </div>
+        <div class="weather__column display"></div>
+      </div>
+      <!-- <div class="covid-19"></div> -->
+    </header>
+    <main class="main">
+      <!-- <div class="greeting"></div> -->
+      <!-- <div class="todo"></div> -->
+    </main>
+    <footer class="footer"></footer>
     <script src="./src/js/background.js"></script>
+    <script src="./src/js/weather.js"></script>
   </body>
 </html>
