New feature: Realtime Clock

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>ScripTodo</title>
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="weather">
         <div class="weather__column active">
           <button class="weather__active-button">
@@ -24,14 +24,18 @@
         </div>
         <div class="weather__column display"></div>
       </div>
-      <!-- <div class="covid-19"></div> -->
-    </header>
+      <div class="covid-19"></div>
+    </header> -->
     <main class="main">
+      <div class="js-clock">
+        <h1>00:00</h1>
+      </div>
       <!-- <div class="greeting"></div> -->
       <!-- <div class="todo"></div> -->
     </main>
-    <footer class="footer"></footer>
-    <script src="./src/js/background.js"></script>
-    <script src="./src/js/weather.js"></script>
+    <!-- <footer class="footer"></footer> -->
+    <script src="./src/js/clock.js"></script>
+    <!-- <script src="./src/js/background.js"></script> -->
+    <!-- <script src="./src/js/weather.js"></script> -->
   </body>
 </html>
