New feature: Add and save username

--- a/index.html
+++ b/index.html
@@ -30,11 +30,16 @@
       <div class="js-clock">
         <h1>00:00</h1>
       </div>
+      <form class="js-form form">
+        <input type="text" placeholder="What is your name?" />
+      </form>
+      <h4 class="js-greetings greeting"></h4>
       <!-- <div class="greeting"></div> -->
       <!-- <div class="todo"></div> -->
     </main>
     <!-- <footer class="footer"></footer> -->
     <script src="./src/js/clock.js"></script>
+    <script src="./src/js/greeting.js"></script>
     <!-- <script src="./src/js/background.js"></script> -->
     <!-- <script src="./src/js/weather.js"></script> -->
   </body>
