New feature: Add and remove items from todo list

--- a/index.html
+++ b/index.html
@@ -29,18 +29,29 @@
     <main class="main">
       <div class="js-clock">
         <h1>00:00</h1>
+        <h2></h2>
       </div>
+
       <form class="js-form form">
         <input type="text" placeholder="What is your name?" />
       </form>
       <h4 class="js-greetings greeting"></h4>
-      <!-- <div class="greeting"></div> -->
-      <!-- <div class="todo"></div> -->
+      <!-- <button class="js-edit-button" title="Edit User">
+        <i class="far fa-edit"></i>
+      </button>
+      <button class="js-delete-button" title="Delete User">
+        <i class="far fa-trash-alt"></i>
+      </button> -->
+      <form class="js-toDoForm">
+        <input type="text" placeholder="Write a to do" />
+      </form>
+      <ul class="js-toDoList"></ul>
     </main>
     <!-- <footer class="footer"></footer> -->
     <script src="./src/js/clock.js"></script>
     <script src="./src/js/greeting.js"></script>
-    <!-- <script src="./src/js/background.js"></script> -->
+    <script src="./src/js/todo.js"></script>
+    <script src="./src/js/background.js"></script>
     <!-- <script src="./src/js/weather.js"></script> -->
   </body>
 </html>
