New feature: Get current weather

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>ScripTodo</title>
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="weather">
         <div class="weather__column active">
           <button class="weather__active-button">
@@ -25,10 +25,11 @@
         <div class="weather__column display"></div>
       </div>
       <div class="covid-19"></div>
-    </header> -->
+    </header>
     <main class="main">
       <div class="js-clock">
         <h1>00:00</h1>
+        <input type="checkbox" class="js-clock-mode" /> 24 Hours
         <h2></h2>
       </div>
 
@@ -52,6 +53,6 @@
     <script src="./src/js/greeting.js"></script>
     <script src="./src/js/todo.js"></script>
     <script src="./src/js/background.js"></script>
-    <!-- <script src="./src/js/weather.js"></script> -->
+    <script src="./src/js/weather.js"></script>
   </body>
 </html>
