--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     </header>
     <main class="main">
       <div class="js-clock">
-        <h1>00:00</h1>
+        <h1 class="js-clock-title">00:00</h1>
+        <h2 class="js-clock-second">00</h2>
+        <h2 class="js-clock-subtitle"></h2>
         <input type="checkbox" class="js-clock-mode" id="clock-mode" />
         <label for="clock-mode">24 Hours</label>
-        <h2></h2>
+        <h3></h3>
       </div>
 
       <form class="js-form form">
