--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <h3 class="date-title"></h3>
       </div>
     </header>
-    <main class="main">
-      <form class="js-form form">
-        <input type="text" placeholder="What is your name?" />
+    <div class="main">
+      <form class="js-nameForm name-form">
+        <input type="text" class="name-input" placeholder="What is your name?" />
       </form>
       <h4 class="js-greetings greeting"></h4>
       <!-- <button class="js-edit-button" title="Edit User">
@@ -53,11 +53,11 @@
       <button class="js-delete-button" title="Delete User">
         <i class="far fa-trash-alt"></i>
       </button> -->
-      <form class="js-toDoForm">
-        <input type="text" placeholder="Write a to do" />
+      <form class="js-toDoForm todo-form">
+        <input type="text" class="todo-input" placeholder="Write a to do" />
       </form>
-      <ul class="js-toDoList"></ul>
-    </main>
+      <ul class="js-toDoList todo-list"></ul>
+    </div>
     <!-- <footer class="footer"></footer> -->
     <script src="./src/js/clock.js"></script>
     <script src="./src/js/greeting.js"></script>
